[refactor] Updated parameter files based on thesis values Refactored test notebooks

--- a/tests/Iliev-5/Iliev-5.ipynb
+++ b/tests/Iliev-5/Iliev-5.ipynb
@@ -118,97 +118,32 @@
    "source": [
     "ILIEV_5_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T5_results'\n",
     "\n",
-    "FIGURE_DIR = './images'\n",
-    "Path(FIGURE_DIR).mkdir(parents=True, exist_ok=True)\n",
-    "\n",
     "TIMES = [10, 30, 100, 200, 500]\n",
     "\n",
-    "COLORS = px.colors.qualitative.Pastel\n",
-    "COLORS2 = px.colors.qualitative.Plotly\n",
+    "SIMULATION_NAMES = [\n",
+    "    ('CAPREOLE+C2-RAY', 'c2ray'),\n",
+    "    ('Enzo', 'enzo'),\n",
+    "#     ('Flash', 'flash'),\n",
+    "#     ('HART', 'Gnedin'),\n",
+    "#     ('LICORICE', 'Licorice'),\n",
+    "    ('RSPH', 'susa'),\n",
+    "    ('RH1D', 'RH1D'),\n",
+    "#     ('ZEUS-MP', 'Zeus'),\n",
+    "]\n",
     "\n",
-    "BINARIES = {\n",
-    "    'CAPREOLE+C2-RAY': {\n",
-    "        'row': 1, 'col': 3, 'color': COLORS[0], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "    'Enzo': {\n",
-    "        'row': 1, 'col': 4, 'color': COLORS[1], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/enzo{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/enzo_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "#     'Flash': {\n",
-    "#         'row': 2, 'col': 3, 'color': COLORS[4], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "#     'HART': {\n",
-    "#         'row': 2, 'col': 4, 'color': COLORS[5], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Gnedin{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Gnedin_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "#     'LICORICE': {\n",
-    "#         'row': 3, 'col': 3, 'color': COLORS[6], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "    'RSPH': {\n",
-    "        'row': 3, 'col': 4, 'color': COLORS[2], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/susa{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/susa_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "    'RH1D': {\n",
-    "        'row': 4, 'col': 3, 'color': COLORS[3], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/RH1D{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_5_DIR}/RH1D_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "#     'ZEUS-MP': {\n",
-    "#         'row': 4, 'col': 4, 'color': COLORS[7], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/Zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/Zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "}\n",
+    "BINARIES = {sn: {\n",
+    "    'orig': {t: {'path': f\"{ILIEV_5_DIR}/{abbr}{ti+1}.bin\"} for ti, t in enumerate(TIMES)},\n",
+    "    'add': {t: {'path': f\"{ILIEV_5_DIR}/{abbr}_add{ti+1}.bin\"} for ti, t in enumerate(TIMES)}\n",
+    "} for sn, abbr in SIMULATION_NAMES}\n",
     "\n",
     "RHYME = {\n",
-    "#     'Rhyme CaseA Lin 3': {\n",
-    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-3bins/Iliev-5-CaseA-3bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseA Lin 10': {\n",
-    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-10bins/Iliev-5-CaseA-10bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseA Lin 30': {\n",
-    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-30bins/Iliev-5-CaseA-30bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseA Lin 100': {\n",
-    "#         'mapPlot': False, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-100bins/Iliev-5-CaseA-100bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseA Log 3': {\n",
-    "#         'mapPlot': True, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-logBins-3bins/Iliev-5-CaseA-logBins-3bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseA Log 10': {\n",
-    "#         'mapPlot': False, 'color': COLORS2[1], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-logBins-10bins/Iliev-5-CaseA-logBins-10bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseA Log 30': {\n",
-    "#         'mapPlot': False, 'color': COLORS2[1], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseA-logBins-30bins/Iliev-5-CaseA-logBins-30bins-000000.chombo.h5'}\n",
-    "#     },\n",
     "    'Rhyme CaseA': { # 'Rhyme CaseA Log 100': {\n",
-    "        'mapPlot': True, 'color': COLORS2[1], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-logBins-100bins/Iliev-5-CaseA-logBins-100bins-000000.chombo.h5'}\n",
+    "        'mapPlot': True,\n",
+    "        0: {'path': './Iliev-5-CaseA/Iliev-5-CaseA-000000.chombo.h5'}\n",
     "    },\n",
-    "#     'Rhyme CaseB Log 3': {\n",
-    "#         'mapPlot': True, 'color': COLORS2[2], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "#         0: {'path': './Iliev-5-CaseB-logBins-3bins/Iliev-5-CaseB-logBins-3bins-000000.chombo.h5'}\n",
-    "#     },\n",
     "    'Rhyme CaseB': { # 'Rhyme CaseB Log 100': {\n",
-    "        'mapPlot': True, 'color': COLORS2[2], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-logBins-CaseB-100bins/Iliev-5-logBins-CaseB-100bins-000000.chombo.h5'}\n",
+    "        'mapPlot': True,\n",
+    "        0: {'path': './Iliev-5-logBins-CaseB/Iliev-5-logBins-CaseB-000000.chombo.h5'}\n",
     "    },\n",
     "}\n",
     "\n",
@@ -288,11 +223,6 @@
     "    return res\n",
     "\n",
     "\n",
-    "def fill_extra_vars(sim, orig):\n",
-    "    for attr in ['color', 'style', 'opacity', 'lw']:\n",
-    "        sim[attr] = orig[attr]\n",
-    "\n",
-    "\n",
     "def reading_binary_files():\n",
     "    result = {}\n",
     "    \n",
@@ -306,13 +236,9 @@
     "                \n",
     "            f = FortranFile(snap['path'], 'r')\n",
     "            domain = f.read_ints(np.int32)\n",
-    "            \n",
     "            result[snap_time][simname]['nHI'] = f.read_reals(np.float32).reshape(domain)\n",
     "            result[snap_time][simname]['p'] = f.read_reals(np.float32).reshape(domain)\n",
     "            result[snap_time][simname]['T'] = f.read_reals(np.float32).reshape(domain)\n",
-    "            \n",
-    "            fill_extra_vars(result[snap_time][simname], sim)\n",
-    "            \n",
     "            f.close()\n",
     "            \n",
     "        for snap_time, snap in sim['add'].items():\n",
@@ -336,8 +262,6 @@
     "        for t in TIMES:\n",
     "            r = PyRhyme(sim[0]['path'])\n",
     "            result[t][sn] = load_rhyme(time_to_snap_id(t, r), r)\n",
-    "            \n",
-    "            fill_extra_vars(result[t][sn], sim)\n",
     "        \n",
     "        r.dataset.close_current()\n",
     "        r.dataset.clean_all()\n",
@@ -349,24 +273,6 @@
     "    \n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    DATA = reading_binary_files()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "def check_cell(attr='n', x=1, y=1, z=1):\n",
-    "    for t, snap in DATA.items():\n",
-    "        print('')\n",
-    "        for simname, sim in snap.items():\n",
-    "            print(f\"{t:3.1f}: {simname:18s}: {attr} = {sim[attr][x, y, z]:3.2e}\")\n",
-    "\n",
-    "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    check_cell(attr='nHI', x=64)"
    ]
   },
   {
@@ -385,15 +291,15 @@
     "def plot_maps(x, y, heatmaps, width, height):\n",
     "    titles = {\n",
     "        'Rhyme CaseA': {'name': 'Rhyme CaseA', 'num': 0},\n",
-    "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
-    "        'Enzo': {'name': 'Enzo', 'num': 2},\n",
-    "        'Flash': {'name': 'Flash', 'num': 3},\n",
-    "        'HART': {'name': 'HART', 'num': 4},\n",
+    "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 6},\n",
+    "        'Enzo': {'name': 'Enzo', 'num': 7},\n",
+    "#         'Flash': {'name': 'Flash', 'num': 3},\n",
+    "#         'HART': {'name': 'HART', 'num': 4},\n",
     "        'Rhyme CaseB': {'name': 'Rhyme CaseB', 'num': 5},\n",
-    "        'LICORICE': {'name': 'Licorice', 'num': 6},\n",
-    "        'RSPH': {'name': 'RSPH', 'num': 7},\n",
-    "        'RH1D': {'name': 'RH1D', 'num': 8},\n",
-    "        'ZEUS-MP': {'name': \"Zeus-MP\", 'num': 9}\n",
+    "#         'LICORICE': {'name': 'Licorice', 'num': 6},\n",
+    "        'RSPH': {'name': 'RSPH', 'num': 8},\n",
+    "        'RH1D': {'name': 'RH1D', 'num': 9},\n",
+    "#         'ZEUS-MP': {'name': \"Zeus-MP\", 'num': 9}\n",
     "    }\n",
     "    \n",
     "    fig = make_subplots(\n",
@@ -447,9 +353,9 @@
     "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme CaseA' else False,\n",
     "            ), h['row'], h['col'])\n",
     "            \n",
-    "            if h['row'] == 4 or sn == 'Rhyme Log 3':\n",
+    "            if h['row'] == 4 or sn == 'Rhyme CaseB':\n",
     "                fig.update_xaxes(\n",
-    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    row=h['row'], col=h['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
     "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
     "                )\n",
     "            else:\n",
@@ -457,7 +363,7 @@
     "            \n",
     "            if h['col'] == 1:\n",
     "                fig.update_yaxes(\n",
-    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    row=h['row'], col=h['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
     "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
     "                )\n",
     "            else:\n",
@@ -508,7 +414,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -780,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
