--- a/tests/Iliev-7/Iliev-7.ipynb
+++ b/tests/Iliev-7/Iliev-7.ipynb
@@ -77,109 +77,22 @@
    "source": [
     "ILIEV_7_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T7_results'\n",
     "\n",
-    "FIGURE_DIR = './figures'\n",
-    "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
     "TIMES = [1, 3, 10, 25, 75]\n",
     "\n",
-    "BINARIES = {\n",
-    "    # TODO: replace the following with a dictionary comprehension\n",
-    "    'CAPREOLE+C2-RAY': {\n",
-    "        'orig': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Mellema1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Mellema2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Mellema3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Mellema4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Mellema5.bin', },\n",
-    "        },\n",
-    "        'add': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Mellema_add1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Mellema_add2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Mellema_add3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Mellema_add4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Mellema_add5.bin', },\n",
-    "        },\n",
-    "    },\n",
-    "    'CORAL': {\n",
-    "        'orig': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/coral1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/coral2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/coral3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/coral4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/coral5.bin', },\n",
-    "        },\n",
-    "        'add': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/coral_add1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/coral_add2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/coral_add3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/coral_add4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/coral_add5.bin', },\n",
-    "        },\n",
-    "    },\n",
-    "    'FLASH-HC': {\n",
-    "        'orig': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/flash1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/flash2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/flash3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/flash4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/flash5.bin', },\n",
-    "        },\n",
-    "        'add': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/flash_add1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/flash_add2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/flash_add3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/flash_add4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/flash_add5.bin', },\n",
-    "        },\n",
-    "    },\n",
-    "    'LICORICE': {\n",
-    "        'orig': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Licorice1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Licorice2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Licorice3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Licorice4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Licorice5.bin', },\n",
-    "        },\n",
-    "        'add': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Licorice_add1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Licorice_add2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Licorice_add3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Licorice_add4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Licorice_add5.bin', },\n",
-    "        },\n",
-    "    },\n",
-    "    'RSPH': {\n",
-    "        'orig': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Susa1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Susa2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Susa3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Susa4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Susa5.bin', },\n",
-    "        },\n",
-    "        'add': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Susa_add1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Susa_add2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Susa_add3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Susa_add4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Susa_add5.bin', },\n",
-    "        },\n",
-    "    },\n",
-    "    'ZEUS-MP': {\n",
-    "        'orig': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Zeus1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Zeus2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Zeus3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Zeus4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Zeus5.bin', },\n",
-    "        },\n",
-    "        'add': {\n",
-    "            1: {'path': f'{ILIEV_7_DIR}/Zeus_add1.bin', },\n",
-    "            3: {'path': f'{ILIEV_7_DIR}/Zeus_add2.bin', },\n",
-    "            10: {'path': f'{ILIEV_7_DIR}/Zeus_add3.bin', },\n",
-    "            25: {'path': f'{ILIEV_7_DIR}/Zeus_add4.bin', },\n",
-    "            75: {'path': f'{ILIEV_7_DIR}/Zeus_add5.bin', },\n",
-    "        },\n",
-    "    },\n",
-    "}\n",
+    "SIMULATION_NAMES = [\n",
+    "    ('CAPREOLE+C2-RAY', 'Mellema'),\n",
+    "    ('CORAL', 'coral'),\n",
+    "    ('FLASH-HC', 'flash'),\n",
+    "    ('LICORICE', 'Licorice'),\n",
+    "    ('RSPH', 'Susa'),\n",
+    "    ('ZEUS-MP', 'Zeus'),\n",
+    "]\n",
+    "\n",
+    "BINARIES = {sn: {\n",
+    "    'orig': {t: {'path': f\"{ILIEV_7_DIR}/{abbr}{ti+1}.bin\"} for ti, t in enumerate(TIMES)},\n",
+    "    'add': {t: {'path': f\"{ILIEV_7_DIR}/{abbr}_add{ti+1}.bin\"} for ti, t in enumerate(TIMES)}\n",
+    "} for sn, abbr in SIMULATION_NAMES}\n",
+    "\n",
     "\n",
     "RHYME = {\n",
     "    'Rhyme Case A': {\n",
@@ -439,11 +352,11 @@
     "    \n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "#     maps(1)\n",
-    "#     maps(3)\n",
-    "#     maps(10)\n",
+    "    maps(1)\n",
+    "    maps(3)\n",
+    "    maps(10)\n",
     "    maps(25)\n",
-    "#     maps(75)"
+    "    maps(75)"
    ]
   },
   {
@@ -704,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
