--- a/tests/Sedov-explosion/sedov_explosion.ipynb
+++ b/tests/Sedov-explosion/sedov_explosion.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Planar Sedov's explosion\n",
+    "\n",
+    "## TOC\n",
+    "* [Packages & Settings](#packages)\n",
+    "* [Snapshots](#snapshots)\n",
+    "* [Loading Snapshots](#loading)\n",
+    "* [Convergence Study](#convergence)\n",
+    "* [Analytical Solution](#analytical)\n",
+    "* [Comparison to Analytical Solution](#comparison)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Packages & Settings  <a class=\"anchor\" id=\"packages\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,6 +30,7 @@
    "source": [
     "from pyrhyme import PyRhyme\n",
     "\n",
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "# !pip install numpy\n",
@@ -17,19 +40,15 @@
     "from astropy import units as U\n",
     "from astropy import constants as C\n",
     "\n",
-    "# !pip install plotly\n",
+    "# !pip3 install -U plotly\n",
     "import plotly\n",
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
-    "import plotly.io as pio\n",
     "from plotly.subplots import make_subplots\n",
-    "pio.templates.default = \"simple_white\"\n",
+    "plotly.io.templates.default = \"simple_white\"\n",
     "\n",
     "from math import pi\n",
-    "\n",
-    "import csv\n",
-    "\n",
-    "import os\n",
+    "from scipy.special import gamma as Γ\n",
     "\n",
     "FIGURE_DIR = './figures'\n",
     "Path(FIGURE_DIR).mkdir(parents=True, exist_ok=True)\n",
@@ -50,7 +69,7 @@
     "    return ds.dataset.num_of_snapshots - 1\n",
     "\n",
     "\n",
-    "def load_rhyme(snap_id, rhyme, n_dim, gamma=7./5.):\n",
+    "def load_rhyme(snap_id, rhyme, n_dim, g=7./5.):\n",
     "    snap = {}\n",
     "    \n",
     "    rhyme.dataset.jump_to(snap_id)\n",
@@ -77,10 +96,29 @@
     "    \n",
     "    snap['v2'] = snap['vx']**2 + snap['vy']**2 + snap['vz']**2\n",
     "    snap['|v|'] = np.sqrt(snap['v2'])\n",
-    "    snap['p'] = (snap['e_tot'] - .5 * snap['rho'] * snap['v2']) * (gamma - 1)\n",
-    "    snap['M'] = snap['|v|'] / np.sqrt(gamma * snap['p'] / snap['rho'])\n",
+    "    snap['p'] = (snap['e_tot'] - .5 * snap['rho'] * snap['v2']) * (g - 1)\n",
+    "    snap['M'] = snap['|v|'] / np.sqrt(g * snap['p'] / snap['rho'])\n",
     "\n",
-    "    return snap"
+    "    return snap\n",
+    "\n",
+    "def make_func():\n",
+    "    func = dict()\n",
+    "    for i, t in enumerate(['0.01', '0.03', '0.05']):\n",
+    "        variables = ['r', 'rho', 'p', 'vx']\n",
+    "        df = pd.read_csv(\"./data/t_%s\" % t, delimiter='\\t', names=['r', 'rho', 'p', 'vx'])\n",
+    "        func[t] = dict()\n",
+    "\n",
+    "        for j, var in enumerate(variables[1:]):\n",
+    "            func[t][var] = scipy.interpolate.interp1d(df['r'], df[var])\n",
+    "\n",
+    "    return func"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Snapshots  <a class=\"anchor\" id=\"snapshots\"></a>"
    ]
   },
   {
@@ -114,6 +152,13 @@
     "                print(f\"[err] Cannot access {res} snap @ {snap['path']}\")\n",
     "            else:\n",
     "                print(f\"[accessible] {res} snap @ {snap['path']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading snapshots  <a class=\"anchor\" id=\"loading\"></a>"
    ]
   },
   {
@@ -158,33 +203,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def load_analytical_solution():\n",
-    "    prefix = 'analytical_solutions'\n",
-    "    result = {}\n",
-    "    \n",
-    "    for t, path in [(0.01, f'{prefix}/sedov_01.csv'), (0.03, f'{prefix}/sedov_03.csv'), (0.05, f'{prefix}/sedov_05.csv')]:\n",
-    "        x, rho, vx, p = [], [], [], []\n",
-    "        \n",
-    "        with open(path, 'r') as file:\n",
-    "            reader = csv.reader(file)\n",
-    "            next(reader, None)\n",
-    "            for row in reader:\n",
-    "                x.append(float(row[0]))\n",
-    "                rho.append(float(row[1]))\n",
-    "                vx.append(float(row[2]))\n",
-    "                p.append(float(row[3]))\n",
-    "                \n",
-    "        result[t] = {'x': np.array(x), 'rho': np.array(rho), 'vx': np.array(vx), 'p': np.array(p)}\n",
-    "        \n",
-    "    return result\n",
-    "\n",
-    "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    SOLUTION = load_analytical_solution()"
+    "## Convergence Study  <a class=\"anchor\" id=\"convergence\"></a>"
    ]
   },
   {
@@ -197,7 +219,7 @@
     "    times=[0.01, 0.03, 0.05],\n",
     "    attrs=['rho', 'vx', 'p'],\n",
     "    attr_labels=['ρ', 'v<sub>x</sub>', 'p'],\n",
-    "    norm_res_fac=32,\n",
+    "    base_res=32,\n",
     "):\n",
     "    colors = px.colors.sample_colorscale(px.colors.diverging.Portland_r, np.linspace(0, 1, len(DATA['linear']['convergence'].keys())+1))\n",
     "    \n",
@@ -248,7 +270,7 @@
     "        for icol, t in enumerate(times):\n",
     "            for ci, (res, snaps) in enumerate(DATA['linear']['convergence'].items()):\n",
     "                y = np.array(DATA['linear']['convergence'][res][t][attr])\n",
-    "                x = np.linspace(0, norm_res_fac, len(y)+1)\n",
+    "                x = np.linspace(0, base_res, len(y)+1)\n",
     "                x -= 0.0625 / res  # FIXME\n",
     "                \n",
     "                fig.add_trace(go.Scatter(\n",
@@ -287,6 +309,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analytical Solution  <a class=\"anchor\" id=\"analytical\"></a>\n",
+    "\n",
+    "Based on [Peter Creasey](https://github.com/Lowingbn/iccpy/blob/8a173c63440fa8697e49d537f1e8792b8037a3d6/flash/sedov_analytic.py) code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sedov(t, E_0=1, rho_0=1, g =1.4, n=1000, nu=1, res=4096):\n",
+    "    gp1, gm1, gm2 = g + 1, g - 1, g - 2\n",
+    "    gp1_gm1 = gp1 / gm1\n",
+    "    nugm1 = nu * gm1\n",
+    "    nu2 = nu + 2\n",
+    "    \n",
+    "    vrange = (2 / nu2 / g, 4 / nu2 / gp1)\n",
+    "    dv = (vrange[1] - vrange[0]) / (n - 1)\n",
+    "    v = vrange[0] + np.arange(n) * dv\n",
+    "   \n",
+    "    a0 = 2 / nu2\n",
+    "    a2 = -gm1 / (2 * gm1 + nu)\n",
+    "    a1 = nu2 * g / (2 + nugm1) * (-2 * nu * gm2 / (g * nu2**2) - a2)\n",
+    "    a3 = nu / (2 * gm1 + nu)\n",
+    "    a4 = -a1 * nu2 / gm2\n",
+    "    a5 = 2 / gm2\n",
+    "    a6 = g / (2 * gm1 + nu)\n",
+    "    a7 =  -a1 * (2 + nugm1) / (nu * gm2)\n",
+    "    \n",
+    "    b = nu2 * gp1 * np.array([\n",
+    "        0.25,\n",
+    "        (g / gm1) / 2,\n",
+    "        -(2 + nugm1) / 2 / (nu2 * gp1 - 2 * (2 + nugm1)),\n",
+    "        -1 / (2 * gm1),\n",
+    "    ])\n",
+    "\n",
+    "    beta = np.outer(b, v) + gp1 * np.array([\n",
+    "        0.0,\n",
+    "        -1 / gm1,\n",
+    "        nu2 / (nu2 * gp1 - 2 * (2 + nugm1)),\n",
+    "        1 / gm1,\n",
+    "    ]).reshape((4,1))\n",
+    "    \n",
+    "    lb = np.log(beta)\n",
+    "    \n",
+    "    r = np.exp(-a0 * lb[0] - a2 * lb[1] - a1 * lb[2])\n",
+    "    \n",
+    "    rho = gp1_gm1 * np.exp(a3 * lb[1] + a5 * lb[3] + a4 * lb[2])\n",
+    "    p = np.exp(nu * a0 * lb[0] + (a5 + 1) * lb[3] + (a4 - 2 * a1) * lb[2]) * 8 / (gp1 * nu2**2)\n",
+    "    u = beta[0] * 4 * r / (gp1 * nu2)\n",
+    "    \n",
+    "    r[0], rho[0], u[0], p[0] = 0, 0, 0, p[1]\n",
+    "\n",
+    "    V = np.power(r, nu) * (pi**(nu / 2) / Γ(nu / 2 + 1))\n",
+    "    de = rho * u**2 * 0.5 + p / gm1\n",
+    "    q = np.inner((de[1:] + de[:-1]), np.diff(V)) / 2  \n",
+    "\n",
+    "    f = (q * (t**nu) * rho_0 / E_0)**(-1 / nu2)\n",
+    "\n",
+    "    return r * f * t * res / 2, rho * rho_0, u * f * 0.03, p * f**2 * rho_0 * 0.001"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison to Analytical Solution  <a class=\"anchor\" id=\"comparison\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -296,28 +392,32 @@
     "    times=[0.01, 0.03, 0.05],\n",
     "    attrs=['rho', 'vx', 'p'],\n",
     "    attr_labels=['ρ', 'v<sub>x</sub>', 'p'],\n",
-    "    norm_res_fac=4096,\n",
+    "    res=4096,\n",
     "):\n",
-    "    colors = px.colors.sample_colorscale(px.colors.diverging.Portland, np.linspace(0, 1, len(DATA['linear']['1d'].keys())+1))\n",
     "    \n",
-    "    ticks = {\n",
+    "    sol = {0.01: {}, 0.03: {}, 0.05:{}}\n",
+    "    sol[0.01]['r'], sol[0.01]['rho'], sol[0.01]['vx'], sol[0.01]['p'] = sedov(0.01, 1, 1, 1.4, n=1000, nu=1, res=res)\n",
+    "    sol[0.03]['r'], sol[0.03]['rho'], sol[0.03]['vx'], sol[0.03]['p'] = sedov(0.03, 1, 1, 1.4, n=1000, nu=1, res=res)\n",
+    "    sol[0.05]['r'], sol[0.05]['rho'], sol[0.05]['vx'], sol[0.05]['p'] = sedov(0.05, 1, 1, 1.4, n=1000, nu=1, res=res)\n",
+    "\n",
+    "    settings = {\n",
     "        'rho': {\n",
-    "            'type': 'log',\n",
-    "            'range': (-2, 1),\n",
+    "            'init': 1,\n",
+    "            'type': 'log', 'range': (-1.5, 1),\n",
     "            'vals': [10**x for x in range(-3, 2)],\n",
     "            'text': [f\"10<sup>{x}</sup>\" if x != 0 else '1' for x in range(-3, 2)],\n",
     "        },\n",
     "        'p': {\n",
-    "            'type': 'log',\n",
-    "            'range': (-5.5, -1.9),\n",
+    "            'init': 1e-5,\n",
+    "            'type': 'log', 'range': (-5.5, -1.9),\n",
     "            'vals': [10**x for x in range(-6, 2)],\n",
     "            'text': [f\"10<sup>{x}</sup>\" if x != 0 else '1' for x in range(-6, 2)],\n",
     "        },\n",
     "        'vx': {\n",
-    "            'type': 'linear',\n",
-    "            'range': (-0.02, 0.11),\n",
-    "            'vals': [0, 0.1, 0.2, 0.3, 0.4],\n",
-    "            'text': [f\"{x}\" for x in [0, 0.1, 0.2, 0.3]],\n",
+    "            'init': 0,\n",
+    "            'type': 'linear', 'range': (-0.01, 0.08),\n",
+    "            'vals': [0, 0.02, 0.04, 0.06, 0.08],\n",
+    "            'text': [f\"{x}\" for x in [0, 0.02, 0.04, 0.06, 0.08]],\n",
     "        },\n",
     "    }\n",
     "    \n",
@@ -342,38 +442,50 @@
     "\n",
     "    fig.layout.annotations[len(times)][\"font\"] = dict(size=18, color='black')\n",
     "    fig.layout.annotations[len(times)][\"y\"] -= 0.0125\n",
-    "    \n",
+    "\n",
     "    for irow, attr in enumerate(attrs):\n",
     "        for icol, t in enumerate(times):\n",
-    "#             fig.add_trace(go.Scatter(\n",
-    "#                 x=SOLUTION[t]['x'][:2000], y=(SOLUTION[t][attr][:2000]), name='Sol.',\n",
-    "#                 mode='lines',  line=dict(color='black', width=1),\n",
-    "#                 showlegend=True if irow == icol == 0 else False\n",
-    "#             ), irow+1, icol+1)\n",
+    "            \n",
+    "            solx = np.array(sol[t]['r'])\n",
+    "            soly = np.array(sol[t][attr])\n",
+    "            \n",
+    "            solxend = solx[-1]\n",
+    "            soly = [x for x in soly] + [settings[attr]['init'], settings[attr]['init']]\n",
+    "            solx = [x for x in solx] + [solxend, 500]\n",
+    "            \n",
+    "            fig.add_trace(go.Scatter(\n",
+    "                x=solx, y=soly, name='Sol.',\n",
+    "                mode='lines',  line=dict(color='black', width=1),\n",
+    "                showlegend=True if irow == icol == 0 else False\n",
+    "            ), irow+1, icol+1)\n",
     "            \n",
     "            for ci, (res, snaps) in enumerate(DATA['linear']['1d'].items()):\n",
     "                y = np.array(DATA['linear']['1d'][res][t][attr])\n",
-    "                x = np.linspace(0, norm_res_fac, len(y)+1)\n",
+    "                x = np.linspace(0, res, len(y)+1)\n",
     "                x -= 0.0625 / res  # FIXME\n",
     "                \n",
     "                fig.add_trace(go.Scatter(\n",
     "                    x=x, y=y, name=f\"{res}\",\n",
-    "                    mode='lines', line=dict(color=colors[ci], width=1),\n",
+    "                    mode='lines', line=dict(color='green', width=1),\n",
     "                    showlegend=True if irow == icol == 0 else False\n",
     "                ), irow+1, icol+1)\n",
     "                \n",
     "            fig.update_xaxes(\n",
     "                row=irow+1, col=icol+1, mirror=True, type='linear', range=xranges[t],\n",
-    "#                 tickmode='array', tickvals=[1, 24, 48], ticktext=['0', '24', '48'],\n",
+    "                tickmode='array', tickvals=[1, 100, 200, 300], ticktext=['0', '100', '200', '300'],\n",
     "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
     "            )\n",
     "            \n",
     "            fig.update_yaxes(\n",
-    "                title=attr_labels[irow] if icol == 0 else None, type=ticks[attr]['type'], range=ticks[attr]['range'],\n",
+    "                title=attr_labels[irow] if icol == 0 else None, type=settings[attr]['type'], range=settings[attr]['range'],\n",
     "                row=irow+1, col=icol+1, mirror=True,\n",
-    "                tickmode='array', tickvals=ticks[attr]['vals'], ticktext=ticks[attr]['text'], showticklabels=True if icol == 0 else False,\n",
+    "                tickmode='array', tickvals=settings[attr]['vals'], ticktext=settings[attr]['text'], showticklabels=True if icol == 0 else False,\n",
     "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
     "            )\n",
+    "            \n",
+    "    for i in range(len(attrs)):\n",
+    "        fig.update_yaxes(titlefont=dict(size=18))\n",
+    "\n",
     "        \n",
     "    width, height = 1000, 1000\n",
     "    \n",
@@ -408,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
