--- a/tests/Iliev-6/Iliev-6.ipynb
+++ b/tests/Iliev-6/Iliev-6.ipynb
@@ -79,60 +79,30 @@
    "source": [
     "ILIEV_6_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T6_results'\n",
     "\n",
-    "IMAGE_DIR = './images'\n",
-    "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
     "TIMES = [1, 3, 10, 25, 75]\n",
     "\n",
-    "BINARIES = {\n",
-    "    'CAPREOLE+C2-RAY': {\n",
-    "        'row': 1, 'col':3,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "#     'Flash': {\n",
-    "#         'row':1, 'col 'c': 4, 'color': COLORS[4], 'style': None, 'opacity': 0.7, 'lw': 0.9,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_6_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_6_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "    'HART': {\n",
-    "        'row': 2, 'col': 3,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/hart{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/hart_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "#     'LICORICE': {\n",
-    "#         'row': 2, 'col': 4,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_6_DIR}/licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_6_DIR}/licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "    'RSPH': {\n",
-    "        'row': 3, 'col': 3,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/rsph{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/rsph_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "    'RH1D': {\n",
-    "        'row': 3, 'col': 4,\n",
-    "        'orig': {t: {'path': f\"{ILIEV_6_DIR}/rh1d{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "        'add': {t: {'path': f\"{ILIEV_6_DIR}/rh1d_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "    },\n",
-    "#     'ZEUS-MP': {\n",
-    "#         'row': 4, 'col': 3,\n",
-    "#         'orig': {t: {'path': f\"{ILIEV_6_DIR}/zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#         'add': {t: {'path': f\"{ILIEV_6_DIR}/zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
-    "#     },\n",
-    "}\n",
+    "SIMULATION_NAMES = [\n",
+    "    ('CAPREOLE+C2-RAY', 'c2ray'),\n",
+    "#     ('Flash', 'flash'),\n",
+    "    ('HART', 'hart'),\n",
+    "#     ('LICORICE', 'licorice'),\n",
+    "    ('RSPH', 'rsph'),\n",
+    "    ('RH1D', 'rh1d'),\n",
+    "#     ('ZEUS-MP', 'zeus'),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "BINARIES = {sn: {\n",
+    "    'orig': {t: {'path': f\"{ILIEV_6_DIR}/{abbr}{ti+1}.bin\"} for ti, t in enumerate(TIMES)},\n",
+    "    'add': {t: {'path': f\"{ILIEV_6_DIR}/{abbr}_add{ti+1}.bin\"} for ti, t in enumerate(TIMES)}\n",
+    "} for sn, abbr in SIMULATION_NAMES}\n",
     "\n",
     "RHYME = {\n",
-    "#     'Rhyme CaseA': {\n",
-    "#         0: {'path': './Iliev-6-logBins-CaseA-100bins/Iliev-6-logBins-CaseA-100bins-000000.chombo.h5'}\n",
-    "#     },\n",
-    "#     'Rhyme CaseB': {\n",
-    "#         0: {'path': './Iliev-6-logBins-CaseB-100bins/Iliev-6-logBins-CaseB-100bins-000000.chombo.h5'}\n",
-    "#     },\n",
     "    'Rhyme CaseA': {\n",
-    "        0: {'path': './Iliev-6-15px/Iliev-6-logBins-CaseA-100bins/Iliev-6-logBins-CaseA-100bins-000000.chombo.h5'}\n",
+    "        0: {'path': './Iliev-6-15px/Iliev-6-logBins-CaseA/Iliev-6-logBins-CaseA-000000.chombo.h5'}\n",
     "    },\n",
     "    'Rhyme CaseB': {\n",
-    "        0: {'path': './Iliev-6-15px/Iliev-6-logBins-CaseB-100bins/Iliev-6-logBins-CaseB-100bins-000000.chombo.h5'}\n",
+    "        0: {'path': './Iliev-6-15px/Iliev-6-logBins-CaseB/Iliev-6-logBins-CaseB-000000.chombo.h5'}\n",
     "    },\n",
     "}\n",
     "\n",
@@ -211,21 +181,23 @@
     "    return res\n",
     "\n",
     "\n",
-    "def reading_binary_files():\n",
+    "def loading_binary_files():\n",
     "    result = {}\n",
     "    \n",
     "    for simname, sim in BINARIES.items():\n",
+    "        print(simname)\n",
     "        for snap_time, snap in sim['orig'].items():\n",
     "            if snap_time not in result:\n",
     "                result[snap_time] = {}\n",
     "                \n",
     "            if simname not in result[snap_time]:\n",
     "                result[snap_time][simname] = {}\n",
-    "                \n",
-    "            f = FortranFile(snap['path'], 'r')\n",
-    "            domain = f.read_ints(np.int32)\n",
     "            \n",
-    "            result[snap_time][simname]['nHI'] = f.read_reals(np.float32).reshape(domain)\n",
+    "            f = FortranFile(snap['path'], 'r')\n",
+    "            \n",
+    "            domain = f.read_ints(dtype=np.int32)\n",
+    "            \n",
+    "            result[snap_time][simname]['nHI'] = f.read_reals(np.float64).reshape(domain)\n",
     "            result[snap_time][simname]['p'] = f.read_reals(np.float32).reshape(domain)\n",
     "            result[snap_time][simname]['T'] = f.read_reals(np.float32).reshape(domain)\n",
     "            \n",
@@ -261,7 +233,7 @@
     "            \n",
     "    \n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    DATA = reading_binary_files()"
+    "    DATA = loading_binary_files()"
    ]
   },
   {
@@ -696,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
